<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="lingga.app.footballleague.ui.standings.StandingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewStandings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="90dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:listStandings="@{viewModel.table}"
            app:spanCount="1"
            tools:listitem="@layout/list_standings" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="164dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/played"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:hideTextView="@{viewModel.statusText}"
            app:layout_constraintBottom_toTopOf="@+id/recyclerViewStandings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/w"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:hideTextView="@{viewModel.statusText}"
            app:layout_constraintBottom_toTopOf="@+id/recyclerViewStandings"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/d"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:hideTextView="@{viewModel.statusText}"
            app:layout_constraintBottom_toTopOf="@+id/recyclerViewStandings"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/l"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:hideTextView="@{viewModel.statusText}"
            app:layout_constraintBottom_toTopOf="@+id/recyclerViewStandings"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/t"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:hideTextView="@{viewModel.statusText}"
            app:layout_constraintBottom_toTopOf="@+id/recyclerViewStandings"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar4"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerViewStandings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/recyclerViewStandings"
            app:layout_constraintTop_toTopOf="@+id/recyclerViewStandings"
            app:loadingProgress="@{viewModel.status}"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>